--- a/services/haLights.service
+++ b/services/haLights.service
@@ -5,4 +5,4 @@ After=syslog.target
 ExecStart=/usr/bin/python /root/ha/haLights.py
 Restart=on-abort
 [Install]
-WantedBy=multi-user.target
+WantedBy=network-online.target
