--- a/services/lightControl.service
+++ b/services/lightControl.service
@@ -2,7 +2,7 @@
 Description=Home Automation Light schedule
 After=syslog.target
 [Service]
-ExecStart=/usr/bin/python /root/ha/haLights.py
+ExecStart=/usr/bin/python /root/ha/lightControl.py
 Restart=on-abort
 [Install]
 WantedBy=multi-user.target
