--- a/services/solarControl.service
+++ b/services/solarControl.service
@@ -2,7 +2,7 @@
 Description=Home Automation solar
 After=syslog.target seweb.service
 [Service]
-ExecStart=/usr/bin/python /root/ha/haSolar.py
+ExecStart=/usr/bin/python /root/ha/solarControl.py
 Restart=on-abort
 [Install]
 WantedBy=multi-user.target
