--- a/services/carControl.service
+++ b/services/carControl.service
@@ -2,7 +2,7 @@
 Description=UI service
 After=multi-user.target
 [Service]
-ExecStart=/usr/bin/python /root/ha/haTacoma.py
+ExecStart=/usr/bin/python /root/ha/carControl.py
 Restart=on-abort
 [Install]
 WantedBy=multi-user.target
