--- a/services/doorbellApp.service
+++ b/services/doorbellApp.service
@@ -2,7 +2,7 @@
 Description=Home Automation doorbell
 After=syslog.target
 [Service]
-ExecStart=/usr/bin/python /root/ha/haDoorbell.py
+ExecStart=/usr/bin/python /root/ha/doorbellApp.py
 Restart=on-abort
 [Install]
 WantedBy=multi-user.target
