--- a/services/garageApp.service
+++ b/services/garageApp.service
@@ -2,7 +2,7 @@
 Description=Home Automation garage
 After=syslog.target
 [Service]
-ExecStart=/usr/bin/python /root/ha/garageControl.py
+ExecStart=/usr/bin/python /root/ha/garageApp.py
 Restart=on-abort
 [Install]
 WantedBy=multi-user.target
