--- a/services/statsApp.service
+++ b/services/statsApp.service
@@ -2,7 +2,7 @@
 Description=Home Automation Power Statistics
 After=syslog.target
 [Service]
-ExecStart=/usr/bin/python /root/ha/webApp.py -f /backups/ha/
+ExecStart=/usr/bin/python /root/ha/statsApp.py -f /backups/ha/
 Restart=on-abort
 [Install]
 WantedBy=multi-user.target
