--- a/services/wundergroundApp.service
+++ b/services/wundergroundApp.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Home Automation Weather Underground update app
-After=syslog.target
+After=syslog.target network-online.target
 [Service]
 ExecStart=/usr/bin/python /root/ha/wundergroundApp.py
 Restart=on-abort
