--- a/services/cameraApp.service
+++ b/services/cameraApp.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=Home Automation Cameras
-After=syslog.target mnt-disk1.mount
+Wants=network-online.target
+After=syslog.target mnt-disk1.mount network-online.target
 [Service]
 ExecStart=/usr/bin/python /root/ha/cameraApp.py
 Restart=on-abort
