--- a/services/networkApp.service
+++ b/services/networkApp.service
@@ -1,5 +1,6 @@
 [Unit]
 Description=Network devices
+Wants=network-online.target
 After=syslog.target network-online.target
 [Service]
 ExecStart=/usr/bin/python /root/ha/networkApp.py
