--- a/services/webApp.service
+++ b/services/webApp.service
@@ -1,5 +1,6 @@
 [Unit]
 Description=Home Automation Web Application
+Wants=network-online.target
 After=syslog.target mnt-disk2.mount network-online.target
 [Service]
 ExecStart=/usr/bin/python /root/ha/webApp.py
